LU-328 unlock fo_llog_list_lock before allocating memory

in filter_find_create_olg in filter.c, the spinlock filter->fo_llog_list_lock
is held during allocating a new obd_llog_group, which cause system hang.

Change-Id: I1b95387fbaf6f9a7080073b8ee7918e46263f1f0
Signed-off-by: Hongchao Zhang <hongchao.zhang@whamcloud.com>